# avnav-ocharts-provider

./: .gitignore  Readme.md  avnav.conf  build.gradle  license-mit.txt  release.htaccess  standalone.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: daily.yml  uploadTest.yml
android/app/: build.gradle
android/app/src/androidTest/java/de/wellenvogel/ochartsprovider/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/de/wellenvogel/ochartsprovider/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/de/wellenvogel/ochartsprovider/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
avnav-plugin/: plugin.py  provider.sh
buildSrc/src/main/groovy/: UploadSftp.groovy  UploadTask.groovy
doc/: Performance-2020-04-10.odt  Performance-2020-04-17.odt  Settings.csv  Settings.ods  charts.txt  parseSettings.py  readme-step1.txt  structure1.odg
docker/: Dockerfile  Dockerfile.gtk2  Dockerfile.gtk3  Dockerfile.pigen  Dockerfile.wx32  README.md  build-devenv.sh  build-pi-cross.sh  build.sh  createBaseImage.sh  pi-cross.conf  prepareAsRoot.sh  startcmd
docker/stage-cross/01-install-extrapackages/: 00-run-chroot.sh
docker/stage-user/00-adduser/: 00-run-chroot.sh
docker/stage0/: prerun.sh
docker/stage0/00-configure-apt/: 00-run.sh
gui/: .babelrc  package-lock.json  package.json  webpack.config.js
gui/public/: index.html  settings.json
gui/src/: App.js  ChartsView.js  SettingsView.js  StatusView.js  Util.js  index.js
gui/src/components/: ChartSetStatus.js  ErrorDisplay.js  OverlayDialog.js  StatusItem.js  StatusLine.js  TabBar.js  TitleBar.js
gui/src/style/: App.less  defines.less
perftest/: checkMem.sh  mem.pl  memleak-xserver.txt  plan1-pi.jmx  plan1.jmx  stat.pl
provider/: CMakeLists.txt  build.sh  license-gpl2.txt  makewrapper.sh
provider/include/: CacheFiller.h  CacheHandler.h  ChartInfo.h  ChartList.h  ChartManager.h  ChartSet.h  ChartSetInfo.h  ColorTable.h  ItemStatus.h  Logger.h  MD5.h  MainQueue.h  RefCount.h  Renderer.h  RequestQueue.h  S57AttributeDecoder.h  SettingsManager.h  SimpleThread.h  SocketHelper.h  StatusCollector.h  StringHelper.h  SystemHelper.h  TestHelper.h  Tiles.h  TokenHandler.h  Types.h  UserSettings.h  UserSettingsBase.h
provider/include/ocpn-import/: dychart.h  ocpn_plugin.h  ocpndc.h  pi_s52s57.h  pluginmanager.h
provider/include/requestHandler/: ChartRequestHandler.h  ListRequestHandler.h  RequestHandler.h  SettingsRequestHandler.h  StaticRequestHandler.h  StatusRequestHandler.h  TokenRequestHandler.h  UploadRequestHandler.h
provider/libs/: AndroidLibs.cmake
provider/libs/opencpn-glu/: CMakeLists.txt
provider/memusage/: Makefile  memdiag.cxx  memdiag.h
provider/src/: CacheFiller.cpp  CacheHandler.cpp  ChartInfo.cpp  ChartList.cpp  ChartManager.cpp  ChartSet.cpp  ChartSetInfo.cpp  ColorTable.cpp  Logger.cpp  MD5.cpp  MainQueue.cpp  RefCount.cpp  Renderer.cpp  S57AttributeDecoder.cpp  SettingsManager.cpp  StatusCollector.cpp  SystemHelper.cpp  TestHelper.cpp  TokenHandler.cpp  main.cpp
provider/src/HTTPd/: HTTPServer.cpp  HTTPServer.h  Worker.cpp  Worker.h
provider/src/ocpn-import/: Viewport.cpp  georef.cpp  ocpndc.cpp  pluginmanager.cpp
provider/tokenHandler/: test.html
s57data/: s57expectedinput.csv
testbase/: runForward.sh  s57data
testbase/test/: avnav.conf
